fixed minor title bar spacing

--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,18 @@ nav  {
   display: flex;
   justify-content: center;
   border: 3px tomato dotted;
-  background-image: url('https://placekitten.com/200/139');
+  background-image: url('https://www.abc.net.au/news/image/9181316-3x2-940x627.jpg');
   height: 10rem ;
-  width: 100% ;
+  width: 100%;
+  margin-bottom: 5rem;
+}
+/*  mess with the background image */
+.img {
+  max-width: 100%;
+  height: auto;
+  opacity: 0.5;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 .links {
